# git-sync

./: .flake8  DONOTMERGE.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/scripts/: check-version-change.py
.github/workflows/: pr.yml  validation.yml
git_sync/: __init__.py  git.py  github.py
tests/: test_github.py
tests/integration/: conftest.py  gitutils.py  test_fast_forward_merged_prs.py  test_is_ancestor.py
