[project]
name = "git-sync"
version = "0.2.3"
description = "Synchronize local git repo with remotes"
authors = [{ name = "Alice Purcell", email = "alicederyn@gmail.com" }]
requires-python = ">= 3.8"
dynamic = ["dependencies"]

[project.scripts]
git-sync = "git_sync:main"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools >= 75"]
build-backend = "setuptools.build_meta"
