[project]
name = "git-sync"
version = "0.2.5"
description = "Synchronize local git repo with remotes"
authors = [{ name = "Alice Purcell", email = "alicederyn@gmail.com" }]
requires-python = ">= 3.8"
dynamic = ["dependencies"]

[project.scripts]
git-sync = "git_sync:main"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "PYI", "RUF", "SIM", "W"]
ignore = [
    "E501",  # Line too long
]
isort.split-on-trailing-comma = false

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools >= 75"]
build-backend = "setuptools.build_meta"
