[project]
name = "git-sync"
version = "0.3"
description = "Synchronize local git repo with remotes"
authors = [{ name = "Alice Purcell", email = "alicederyn@gmail.com" }]
requires-python = ">= 3.12"
dynamic = ["dependencies"]

[project.scripts]
git-sync = "git_sync:main"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "PYI", "RUF", "SIM", "UP", "W"]
isort.split-on-trailing-comma = false

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools >= 75"]
build-backend = "setuptools.build_meta"
